README updated.